Got it tweeting through queue

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -26,7 +26,7 @@
 </form>
 
 <div id="preloader">
-  <p>Your Tweet is Processing</p>
+  <p>Stare at this while your tweet processes</p>
   <img src="ajax-loader.gif">
 </div>
   
