Added scheduling for the future

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -22,7 +22,8 @@
 
 <form action="/tweet" method="post" id="tweet">
   <input id="tweet-text" type="text" name="tweet" placeholder="Tweet it, bro"><br>
-  <input type="submit" value="Tweet Now">
+  <input id="tweet-time" type="number" name="time" placeholder="Delay in seconds"><br>  
+  <input type="submit" value="Tweet It Now or Later, Player">
 </form>
 
 <div id="preloader">
